modify wrong spelling

--- a/publication/index.html
+++ b/publication/index.html
@@ -451,7 +451,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://www.youtube.com/watch?v=htht3CGYiHk" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://www.youtube.com/watch?v=-mgcOvlVxuY" target="_blank" rel="noopener">
   Video
 </a>
 
