--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="tlsshh.github.io/publication/ar-game-demo/" >Jumping Rabbits! -- an AR shooting game took place on real-world planes</a>
+      <a href="tlsshh.github.io/publication/ar-game-demo/" >Jumping Rabbits! -- an AR shooting game taking place on real-world planes</a>
     </h3>
 
     
