--- a/publication/index.html
+++ b/publication/index.html
@@ -554,7 +554,7 @@
 
   </span>
   (2017).
-  <a href="tlsshh.github.io/publication/ar-game-demo/">Jumping Rabbits! -- an AR shooting game took place on real-world planes</a>.
+  <a href="tlsshh.github.io/publication/ar-game-demo/">Jumping Rabbits! -- an AR shooting game taking place on real-world planes</a>.
   
   <p>
 
