--- a/publication/index.html
+++ b/publication/index.html
@@ -83,7 +83,7 @@
   
   
   
-  <link rel="stylesheet" href="/tlsshh.github.io/css/academic.min.04ac81a963d19fb808b3d20a3a599b63.css">
+  <link rel="stylesheet" href="/tlsshh.github.io/css/academic.min.11d8ffe135bd77c9340aff855b47bbeb.css">
 
   
 
@@ -416,11 +416,11 @@
 
 
   
-  <span><a href="tlsshh.github.io/authors/jundan-luo-zhaoyang-huang/">Jundan Luo, Zhaoyang Huang</a></span>
+  <span><a href="tlsshh.github.io/authors/jundan-luo-zhaoyang-huang-yijin-li-xiaowei-zhou-guofeng-zhang-hujun-bao/">Jundan Luo, Zhaoyang Huang, Yijin Li, Xiaowei Zhou, Guofeng Zhang, Hujun Bao</a></span>
 
   </span>
   (2019).
-  <a href="tlsshh.github.io/publication/intrinsic-image-decomposition/">Inductive transfer learning from surface normal estimation for intrinsic image decomposition</a>.
+  <a href="tlsshh.github.io/publication/intrinsic-image-decomposition/">Intrinsic image decomposition with surface normal cues [submitted]</a>.
   
   <p>
 
