--- a/publication/ar-game-demo/index.html
+++ b/publication/ar-game-demo/index.html
@@ -658,7 +658,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="tlsshh.github.io">Jundan Luo</a></h5>
       <h6 class="card-subtitle">M.S. Student at State Key Lab of CAD&amp;CG</h6>
-      <p class="card-text">My research interests include computer vision and deep learning.</p>
+      <p class="card-text">My research interests include computer vision and image processing.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
