--- a/publication/index.html
+++ b/publication/index.html
@@ -451,7 +451,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://www.youtube.com/watch?v=-mgcOvlVxuY" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://www.youtube.com/watch?v=M93fWR3MSjw" target="_blank" rel="noopener">
   Video
 </a>
 
@@ -491,7 +491,7 @@
 
   </span>
   (2018).
-  <a href="tlsshh.github.io/publication/plane-3d-reconstruction/">Real-time Multi-Plane 3D Reconstruction in Indoor Scenes on Mobile Platform</a>.
+  <a href="tlsshh.github.io/publication/plane-3d-reconstruction/">Real-time multi-plane 3D reconstruction on the mobile platform</a>.
   
   <p>
 
