--- a/publication/intrinsic-image-decomposition/index.html
+++ b/publication/intrinsic-image-decomposition/index.html
@@ -574,7 +574,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1" href="https://www.youtube.com/watch?v=-mgcOvlVxuY" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://www.youtube.com/watch?v=M93fWR3MSjw" target="_blank" rel="noopener">
   Video
 </a>
 
@@ -591,7 +591,7 @@
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 406px;">
   <div style="position: relative">
     <img src="/tlsshh.github.io/publication/intrinsic-image-decomposition/featured_hu1e8a0a28dfeac48410b18e0a389656b0_503257_720x0_resize_lanczos_2.png" alt="" class="featured-image">
-    <span class="article-header-caption">the original input image (small) and the edited image (large): <a href="https://www.youtube.com/watch?v=-mgcOvlVxuY" target="_blank"><strong>longer edited image sequences [video]</strong></a></span>
+    <span class="article-header-caption">the original input image (small) and the edited image (large): <a href="https://www.youtube.com/watch?v=M93fWR3MSjw" target="_blank"><strong>longer edited image sequences [video]</strong></a></span>
   </div>
 </div>
 
